--- a/force-app/main/default/aura/VisitPlanConfiguration/VisitPlanConfiguration.cmp
+++ b/force-app/main/default/aura/VisitPlanConfiguration/VisitPlanConfiguration.cmp
@@ -65,32 +65,38 @@
                     {!$Label.c.empty_visits}
                 </div>
                 <aura:set attribute="else">
-                    <table class="slds-table slds-table_bordered slds-table_striped">
-                        <thead>
-                        <tr class="slds-text-title_caps">
-                            <th>
-                                <div class="slds-truncate" title="Column 1">{!$Label.c.visit_Name}</div>
-                            </th>
-                            <th>
-                                <div class="slds-truncate" title="Column 1">{!$Label.c.Visit_Patient_Portal_Name}</div>
-                            </th>
-                            <th>
-                                <div class="slds-truncate" title="Column 1">{!$Label.c.Visit_Number}</div>
-                            </th>
-                            <th>
-                                <div class="slds-truncate" title="Column 1">{!$Label.c.Visit_Schedule}</div>
-                            </th>
-                            <th>
-                                <div class="slds-truncate" title="Column 1">{!$Label.c.Visit_Icons}</div>
-                            </th>
-                        </tr>
-                        </thead>
-                        <tbody>
-                        <aura:iteration var="visit" items="{!v.currentVisits}">
-                            <c:VisitItem visit="{!visit}"/>
-                        </aura:iteration>
-                        </tbody>
-                    </table>
+
+                    <div class="slds-scrollable">
+                        <table class="slds-table slds-table_bordered slds-table_striped">
+                            <thead>
+                            <tr class="slds-text-title_caps">
+                                <th>
+                                    <div class="slds-truncate" title="Column 1">{!$Label.c.visit_Name}</div>
+                                </th>
+                                <th>
+                                    <div class="slds-truncate"
+                                         title="Column 1">{!$Label.c.Visit_Patient_Portal_Name}</div>
+                                </th>
+                                <th>
+                                    <div class="slds-truncate" title="Column 1">{!$Label.c.Visit_Number}</div>
+                                </th>
+                                <th>
+                                    <div class="slds-truncate" title="Column 1">{!$Label.c.Visit_Schedule}</div>
+                                </th>
+                                <th>
+                                    <div class="slds-truncate" title="Column 1">{!$Label.c.Visit_Icons}</div>
+                                </th>
+                            </tr>
+                            </thead>
+                            <tbody>
+
+                            <aura:iteration var="visit" items="{!v.currentVisits}">
+                                <c:VisitItem visit="{!visit}"/>
+                            </aura:iteration>
+                            </tbody>
+                        </table>
+
+                    </div>
                 </aura:set>
             </aura:if>
             <aura:set attribute="else">
