--- a/force-app/main/default/layouts/Patient_Visit__c-Patient Visit Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/Patient_Visit__c-Patient Visit Layout.layout-meta.xml
@@ -42,6 +42,10 @@
                 <behavior>Edit</behavior>
                 <field>Order__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Participant_Enrollment__c</field>
+            </layoutItems>
         </layoutColumns>
         <layoutColumns>
             <layoutItems>
