--- a/force-app/main/default/layouts/Participant__c-Participant Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/Participant__c-Participant Layout.layout-meta.xml
@@ -45,6 +45,10 @@
                 <behavior>Edit</behavior>
                 <field>Phone_Type__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Current_Participant_Enrollment__c</field>
+            </layoutItems>
         </layoutColumns>
         <layoutColumns>
             <layoutItems>
