--- a/force-app/main/default/aura/PSEPath/PSEPath.cmp
+++ b/force-app/main/default/aura/PSEPath/PSEPath.cmp
@@ -8,7 +8,7 @@
     <aura:attribute name="steps" type="List"/>
     <aura:attribute name="pathItems" type="List" access="private"/>
     <aura:attribute name="isCollapsed" type="Boolean" default="true" access="private"/>
-    <aura:attribute name="pse" type="Object"/>
+    <aura:attribute name="pe" type="Object"/>
 
     <!-- handler: -->
     <aura:handler name="init" value="{!this}" action="{!c.doInit}"/>
