--- a/force-app/main/default/aura/Action_ChangePEStatusByPI/Action_ChangePEStatusByPI.cmp
+++ b/force-app/main/default/aura/Action_ChangePEStatusByPI/Action_ChangePEStatusByPI.cmp
@@ -3,22 +3,18 @@
  -->
 
 <aura:component description="Action_ChangePEStatusByPI" controller="Action_ChangePEStatusByPIRemote">
+    <ltng:require styles="{!join(',', $Resource.rr_community_css, $Resource.proximanova + '/proximanova.css')}"
+                  scripts="{!join(',', $Resource.rr_community_js)}" afterScriptsLoaded="{!c.doInit}"/>
 
-    <!-- attributes: -->
-    <aura:attribute name="peId" type="String"/>
-    <aura:attribute name="status" type="String"/>
-    <aura:attribute name="reason" type="String"/>
-    <aura:attribute name="notes" type="String"/>
-    <aura:attribute name="refreshSource" type="Aura.Component"/>
-    <aura:attribute name="statesList" type="List"/>
-    <aura:attribute name="referralDeclineReasons" type="List"/>
-    <aura:attribute name="isInitialized" type="Boolean" default="false"/>
-    <aura:attribute name="closeButtonClicked" type="Boolean"/>
-    <aura:attribute name="inProgress" type="Boolean" default="false"/>
-
-    <!-- handlers: -->
-    <aura:handler name="init" value="{!this}" action="{!c.doInit}"/>
-    <aura:handler name="change" value="{!v.closeButtonClicked}" action="{!c.doHideSpinner}"/>
+    <!-- private attributes: -->
+    <aura:attribute name="peId" type="String" access="private"/>
+    <aura:attribute name="status" type="String" access="private"/>
+    <aura:attribute name="reason" type="String" access="private"/>
+    <aura:attribute name="notes" type="String" access="private"/>
+    <aura:attribute name="callback" type="Object" access="private"/>
+    <aura:attribute name="cancelCallback" type="Object" access="private"/>
+    <aura:attribute name="referralDeclineReasons" type="List" access="private"/>
+    <aura:attribute name="isInitialized" type="Boolean" default="false" access="private"/>
 
     <!-- methods: -->
     <aura:method name="execute" action="{!c.doExecute}" access="public">
@@ -26,15 +22,18 @@
         <aura:attribute name="status" type="String"/>
         <aura:attribute name="reason" type="String"/>
         <aura:attribute name="notes" type="String"/>
-        <aura:attribute name="refreshSource" type="Aura.Component"/>
+        <aura:attribute name="callback" type="Function"/>
+        <aura:attribute name="cancelCallback" type="Function"/>
     </aura:method>
+
+    <!-- actions: -->
+    <c:RRActionApprove aura:id="actionApprove" message="{!$Label.c.Poput_ICF}" approveBtnName="{!$Label.c.BTN_Confirm}"/>
 
     <!-- component body: -->
     <aura:if isTrue="{!v.isInitialized}">
-
         <!--select referral decline reason dialog: -->
-        <c:Popup aura:id="selectReferralDeclineReasonDialog" title="{!$Label.c.PG_ACPE_T_Select_decline_reason}" size="small" closeButtonClicked="{!v.closeButtonClicked}">
-            <c:RRSpinner aura:id="reasonSpinner"/>
+        <c:Popup aura:id="selectReferralDeclineReasonDialog" title="{!$Label.c.PG_ACPE_T_Select_decline_reason}" size="small">
+            <c:RRSpinner aura:id="spinner"/>
             <div class="full-width rr-form-element">
                 <div class="label">{!$Label.c.PG_ACPE_L_Select_decline_reason}</div>
                 <c:rrSelect value="{!v.reason}" options="{!v.referralDeclineReasons}" placeholder="{!$Label.c.PG_ACPE_L_Select_decline_reason}" useSentenceFont="false"/>
@@ -43,8 +42,8 @@
                 <lightning:input label="{!$Label.c.PG_ACPE_L_Notes + ' (' + if(v.reason == 'Other', $Label.c.PG_ACPE_L_required, $Label.c.PG_ACPE_L_optional) + ')'}" value="{!v.notes}"/>
             </div>
             <aura:set attribute="footerButtons">
-                <button class="apollo-btn primary" onclick="{!c.doUpdatePE}" disabled="{!empty(v.reason) || and(v.reason == 'Other', empty(v.notes))}">Ok</button>
-                <button class="apollo-btn tertiary" onclick="{!c.doHideDialogs}">Cancel</button>
+                <button class="apollo-btn primary" onclick="{!c.doUpdatePE}" disabled="{!empty(v.reason) || and(v.reason == 'Other', empty(v.notes))}">{!$Label.c.BTN_OK}</button>
+                <button class="apollo-btn tertiary" onclick="{!c.doCancel}">{!$Label.c.BTN_Cancel}</button>
             </aura:set>
         </c:Popup>
 
