--- a/force-app/main/default/layouts/Study_Site__c-Study Site Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/Study_Site__c-Study Site Layout.layout-meta.xml
@@ -183,6 +183,10 @@
                 <behavior>Edit</behavior>
                 <field>Is_Virtual_Study_Site__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Primary_Key_ePR__c</field>
+            </layoutItems>
         </layoutColumns>
         <style>TwoColumnsLeftToRight</style>
     </layoutSections>
@@ -332,7 +336,7 @@
     <showRunAssignmentRulesCheckbox>false</showRunAssignmentRulesCheckbox>
     <showSubmitAndAttachButton>false</showSubmitAndAttachButton>
     <summaryLayout>
-        <masterLabel>00h4E000000nx6F</masterLabel>
+        <masterLabel>00h1j000000YqPs</masterLabel>
         <sizeX>4</sizeX>
         <sizeY>0</sizeY>
         <summaryLayoutStyle>Default</summaryLayoutStyle>
