--- a/force-app/main/default/aura/PSECard/PSECard.cmp
+++ b/force-app/main/default/aura/PSECard/PSECard.cmp
@@ -11,7 +11,7 @@
 
     <!-- component body:-->
     <div class="rr-white-panel padding" style="position: relative">
-        <c:ParticipantCardHeader userMode="{!v.userMode}" pe="{!v.pe}"/>
+        <c:ParticipantCardHeader userMode="{!v.userMode}" pe="{!v.pe}" isReferral="false"/>
         <c:ParticipantCardFields userMode="{!v.userMode}" pe="{!v.pe}"/>
         <c:PSEPath steps="{!v.steps}" pe="{!v.pe}"/>
     </div>
