--- a/force-app/main/default/aura/ViewPatientItem/ViewPatientItem.cmp
+++ b/force-app/main/default/aura/ViewPatientItem/ViewPatientItem.cmp
@@ -32,7 +32,7 @@
             <div style="height: 250px"></div>
         </aura:if>
         <aura:if isTrue="{!!empty(v.pe)}">
-            <c:ParticipantCardHeader userMode="{!v.userMode}" pe="{!v.pe}"/>
+            <c:ParticipantCardHeader userMode="{!v.userMode}" pe="{!v.pe}" isReferral="true"/>
             <c:ParticipantCardFields userMode="{!v.userMode}" pe="{!v.pe}"/>
 
             <aura:if isTrue="{!v.showPath}">
