--- a/force-app/main/default/aura/IconsStaticResourceService/IconsStaticResourceService.cmp
+++ b/force-app/main/default/aura/IconsStaticResourceService/IconsStaticResourceService.cmp
@@ -7,7 +7,7 @@
     <aura:handler name="init" value="{!this}" action="{!c.doInit}"/>
     <aura:attribute name="IconsPackageFIlePath" type="String"/>
     <aura:attribute name="staticResourceName" type="String"/>
-    <aura:attribute name="iconNames" type="String[]"/>
+    <aura:attribute name="iconNames" type="Object[]"/>
     <aura:attribute name="iconsDetail" type="Object[]"/>
     <aura:attribute name="iconsURL" type="String"/>
 
