Fix icon in Study Visits icon legends.

--- a/force-app/main/default/aura/StudyVisitsLegend/StudyVisitsLegend.cmp
+++ b/force-app/main/default/aura/StudyVisitsLegend/StudyVisitsLegend.cmp
@@ -18,7 +18,7 @@
                         <div class="svl-row">
                             <div class="svl-icon-label">
                                 <div class="svl-icon">
-                                    <c:RRIcon iconName="{!legend.iconId}"/>
+                                    <c:RRIcon resource="{!$Resource.Icons_legend}" iconName="{!legend.iconId}"/>
                                 </div>
                                 <div class="svl-label">{!legend.iconLabel}</div>
                             </div>
