MyStudySites, MyPatientsStatistics and MyReferredZone moved to Deprecated. Invite RP moved from MyReferringClinics to Action_InviteRP. MyReferring Clinics first stage of refactoring. Show Entries fixed.

--- a/force-app/main/default/aura/MyReferringClinics/MyReferringClinics.css
+++ b/force-app/main/default/aura/MyReferringClinics/MyReferringClinics.css
@@ -18,10 +18,6 @@
     }
 }
 
-.THIS .mrc-invite-popup{
-    max-width: 300px;
-}
-
 .THIS .rr-form-element{
     margin-bottom: 10px;
     min-width: 300px;
@@ -49,4 +45,19 @@
 
 .THIS .p-content{
     max-height: 72vh!important;
+}
+
+.THIS.mrz-main-container,
+.THIS.mrz-filter {
+    color: #666666;
+    display: inline-block;
+    width: 100%;
+    font-family: "Proxima Nova";
+    font-size: 13px;
+    font-weight: 500;
+    line-height: 21px;
+}
+
+.THIS.mrz-filter .fp-filter-block input {
+    border: none;
 }
