--- a/force-app/main/default/aura/FilterPanel/FilterPanel.cmp
+++ b/force-app/main/default/aura/FilterPanel/FilterPanel.cmp
@@ -19,6 +19,7 @@
     <aura:attribute name="isCollapsed" type="Boolean" default="true"/>
     <aura:attribute name="showMore" type="Boolean" default="false"/>
     <aura:attribute name="showMoreEnabled" type="Boolean" default="false"/>
+    <aura:attribute name="showEntriesVisble" type="Boolean" default="true"/>
     <aura:attribute name="itemTitle" type="String" default="{!$Label.c.PG_DB_L_patients}"/>
 
     <!--compoenent body -->
@@ -86,10 +87,12 @@
                             <c:rrSelect value="{!v.sortType}" options="{!v.sortVariants}"/>
                         </div>
                     </aura:if>
-<!--                    <div class="fp-form-element">-->
-<!--                        <label>{!$Label.c.PG_FP_L_Show_entries}</label>-->
-<!--                        <c:rrSelect value="{!v.recordsPerPage}" options="{!v.recordsPerPageVariants}"/>-->
-<!--                    </div>-->
+                    <aura:if isTrue="{!v.showEntriesVisble}">
+                        <div class="fp-form-element">
+                            <label>{!$Label.c.PG_FP_L_Show_entries}</label>
+                            <c:rrSelect value="{!v.recordsPerPage}" options="{!v.recordsPerPageVariants}"/>
+                        </div>
+                    </aura:if>
                 </div>
             </aura:if>
         </div>
