--- a/force-app/main/default/aura/ReferringClinicEnrollmentItem/ReferringClinicEnrollmentItem.cmp
+++ b/force-app/main/default/aura/ReferringClinicEnrollmentItem/ReferringClinicEnrollmentItem.cmp
@@ -1,15 +1,12 @@
 <!--
  - Created by D.Yasinskyi on 02.03.2018.
  -->
-<aura:component controller="MyReferringClinicsController" description="ReferringClinicEnrollmentItem">
+<aura:component description="ReferringClinicEnrollmentItem">
 
     <!-- attributes: -->
     <aura:attribute name="enrollmentData" type="Object" required="true"/>
     <aura:attribute name="userMode" type="String" required="true"/>
     <aura:attribute name="parent" type="Aura.Component" required="true"/>
-
-    <!-- methods: -->
-    <aura:method name="refresh" action="{!c.handelChangeStatus}" access="public"/>
 
     <!-- component body: -->
     <c:InfoModal aura:id="infoModal"/>
